# R2-webdav-rs

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: ci.yml  docker-image.yml
scripts/: test-webdav.sh
src/: auth.rs  config.rs  main.rs  safe_path.rs
src/r2/: client.rs  file.rs  fs.rs  meta.rs  mod.rs
