[package]
name = "r2-webdav"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A simple WebDAV server backed by Cloudflare R2, with streaming large-file support"
repository = "https://github.com/conashin/R2-webdav-rs"

[dependencies]
dav-server = "0.11"
aws-sdk-s3 = "1"
aws-config = "1"
aws-credential-types = "1"
aws-smithy-types = "1"
aws-smithy-runtime-api = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "sync"] }
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "server"] }
http-body-util = "0.1"
futures-util = "0.3"
bytes = "1"
base64 = "0.22"
sha2 = "0.10"
subtle = "2"
percent-encoding = "2"
url = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
# "fat" (whole-program) LTO: identical to `lto = true`, spelled out so the
# optimization level is explicit. Paired with codegen-units = 1 it maximizes
# cross-crate inlining for the shipped binary at the cost of build time.
lto = "fat"
codegen-units = 1
strip = true
# NOTE: panic = "abort" is intentionally NOT set. A panic in one connection
# task must not take down the whole server, and it would skip R2File::drop
# (which aborts a dangling multipart upload).
